k8s/sample-app.yaml
apiVersion: v1
kind: Namespace
metadata:
  labels:
    argocd.argoproj.io/managed-by: argocd
    kubernetes.io/metadata.name: sample-app
    name: sample-app
  name: sample-app
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  labels:
    app: sample-app
  name: sample-app
  namespace: sample-app
spec:
  ingressClassName: nginx
  rules:
  # CHANGE THIS
  #- host: sample-app.gkeX.<DOMAIN>.cloud
  - host: sample-app.gke1.gfu.cloud
    http:
      paths:
      - backend:
          service:
            name: sample-app
            port:
              name: http
        path: /
        pathType: Prefix
---
# autogenerated by rollout
#apiVersion: networking.k8s.io/v1
#kind: Ingress
#metadata:
#  annotations:
#    nginx.ingress.kubernetes.io/canary: "true"
#    nginx.ingress.kubernetes.io/canary-by-header: X-Canary
#    nginx.ingress.kubernetes.io/canary-weight: "0"
#  name: sample-app-sample-app-canary
#  namespace: sample-app
#spec:
#  ingressClassName: nginx
#  rules:
#  - host: sample-app.gkeX.<DOMAIN>.cloud
#    http:
#      paths:
#      - backend:
#          service:
#            name: sample-app-canary
#            port:
#              name: http
#        path: /
#        pathType: Prefix
---
apiVersion: v1
kind: Service
metadata:
  annotations:
    argo-rollouts.argoproj.io/managed-by-rollouts: sample-app
  labels:
    app: sample-app
  name: sample-app
  namespace: sample-app
spec:
  ports:
  - name: http
    port: 8080
    protocol: TCP
    targetPort: 8080
  - name: metrics
    port: 9090
    protocol: TCP
    targetPort: 9090
  selector:
    app: sample-app
  type: LoadBalancer
---

apiVersion: v1
kind: Service
metadata:
  annotations:
    argo-rollouts.argoproj.io/managed-by-rollouts: sample-app
  labels:
    app: sample-app
  name: sample-app-canary
  namespace: sample-app
spec:
  ports:
  - name: http
    port: 8080
    protocol: TCP
    targetPort: 8080
  - name: metrics
    port: 9090
    protocol: TCP
    targetPort: 9090
  selector:
    app: sample-app
  type: LoadBalancer
---

apiVersion: argoproj.io/v1alpha1
kind: Rollout
metadata:
  annotations:
  labels:
    app: sample-app
  name: sample-app
  namespace: sample-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: sample-app
  strategy:
    canary:
      analysis:
        startingStep: 2
        templates:
        - templateName: sample-app
      canaryMetadata:
        labels:
          deployment: canary
      canaryService: sample-app-canary
      stableMetadata:
        labels:
          deployment: stable
      stableService: sample-app
      steps:
      - setWeight: 25
      - pause: {}
      - setWeight: 50
      - pause:
          duration: 3m
      - setWeight: 75
      - pause:
          duration: 3m
      trafficRouting:
        nginx:
          additionalIngressAnnotations:
            canary-by-header: X-Canary
          stableIngress: sample-app
  template:
    metadata:
      labels:
        app: sample-app
    spec:
      containers:
      - env:
        - name: HTTP_PORT
          value: "8080"
        - name: METRICS_PORT
          value: "9090"
        - name: KUBERNETES_NODE
          valueFrom:
            fieldRef:
              fieldPath: spec.nodeName
        - name: KUBERNETES_NAMESPACE
          valueFrom:
            fieldRef:
              fieldPath: metadata.namespace
        - name: KUBERNETES_POD
          valueFrom:
            fieldRef:
              fieldPath: metadata.name
        - name: KUBERNETES_DEPLOYMENT
          valueFrom:
            fieldRef:
              fieldPath: metadata.labels['deployment']
        image: gcr.io/sci-4-data/sci4/sample-app:1.0.0
        #image: gcr.io/sci-4-data/sci4/sample-app:latest
        name: sample-app
        ports:
        - containerPort: 8080
          name: http
          protocol: TCP
        - containerPort: 9090
          name: metrics
          protocol: TCP
      serviceAccountName: sample-app
